Wildlife_corridor_analysis/GpMessages/103428010331600
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: mardi, 29 avril 2025 15:52:17</msg><msg code="539" type="100">ERROR 000539:   File "&lt;expression&gt;", line 1
    if objektart == 'highway':
    ^
SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at mardi, 29 avril 2025 15:52:17 (Elapsed Time: 0,27 seconds)</msg></messages>